[project]
name = "question-visualizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Molly Jones",email = "mojones.e@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
    "ete3 (>=3.1.3,<4.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"